[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/family_member.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/sprites/Bars/family_tree.gd" type="Script" id=2]

[node name="family_bar" type="HBoxContainer"]
anchor_left = -0.176
anchor_top = 0.56
anchor_right = -0.176
anchor_bottom = 0.56
margin_left = 0.224014
margin_top = -336.0
margin_right = 516.224
grow_horizontal = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="family_member" parent="." instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 60.0
margin_bottom = 336.0
rect_min_size = Vector2( 60, 200 )

[node name="family_member2" parent="." instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 0.0
margin_right = 124.0
margin_bottom = 336.0
rect_min_size = Vector2( 60, 200 )

[node name="family_member3" parent="." instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 0.0
margin_right = 188.0
margin_bottom = 336.0
rect_min_size = Vector2( 60, 200 )

[node name="family_member4" parent="." instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_top = 0.0
margin_right = 252.0
margin_bottom = 336.0
rect_min_size = Vector2( 60, 200 )

[node name="family_member5" parent="." instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 0.0
margin_right = 316.0
margin_bottom = 336.0
rect_min_size = Vector2( 60, 200 )
[connection signal="signal1" from="." to="family_member" method="_on_family_bar_signal1"]
[connection signal="signal2" from="." to="family_member2" method="_on_family_bar_signal2"]
[connection signal="signal3" from="." to="family_member3" method="_on_family_bar_signal3"]
[connection signal="signal4" from="." to="family_member4" method="_on_family_bar_signal4"]
[connection signal="signal5" from="." to="family_member5" method="_on_family_bar_signal5"]
[connection signal="member_died" from="family_member" to="." method="_on_family_member_member_died"]
[connection signal="member_died" from="family_member2" to="." method="_on_family_member2_member_died"]
[connection signal="member_died" from="family_member3" to="." method="_on_family_member3_member_died"]
[connection signal="member_died" from="family_member4" to="." method="_on_family_member4_member_died"]
[connection signal="member_died" from="family_member5" to="." method="_on_family_member5_member_died"]
